Oppdatert struktur på proteføljeoversikt

--- a/docs/Bli_med_i_Fintech.mdx
+++ b/docs/Bli_med_i_Fintech.mdx
@@ -10,7 +10,7 @@ Dette kan du gjøre som medlem i Fintech Enigma:
     <li>Utvikle tradingalgoritmer </li>
 </ul>
 <ul className={styles.chart}>
-  <li>Forvalte <a style={{color: "#06ADF4"}} href={'https://shareville.no/profiles/fintech-enigma/portfolios/610411'}>Fintech Enigma-fondet</a></li>
+  <li>Forvalte <a style={{color: "#06ADF4"}} href={'/docs/Portefoljeoversikt/Nordnetportefolje'}>Fintech Enigma-fondet</a></li>
 </ul>
 <ul className={styles.mac}>
   <li>Utvikle og vedlikeholde nettsiden vår</li>
