--- a/docs/Portefoljeoversikt/Teknisk-analyse algoritmer.mdx
+++ b/docs/Portefoljeoversikt/Teknisk-analyse algoritmer.mdx
@@ -1,7 +1,7 @@
-# Algoritmeportefølje
+# Teknisk-analyse algoritmer
 
-import styles from './css/algos.module.css';
-import ansvarlige from './folk/ansvarlige.json';
+import styles from '../css/algos.module.css';
+import ansvarlige from '../folk/ansvarlige.json';
 
 export const Bilde = ({children, url, alt}) => {
     return (
@@ -81,4 +81,4 @@ Dette er en simpel indikator som bruker bollinger bands og moving average til å
       }
 ...
 ````
-Klikk <a href={'https://github.com/fintech-enigma/Algoritmeportefolje/tree/main/Bollinger%20bands%20algoritme'} style={{color: "#06ADF4"}}>her</a> for å se resten av koden.
+Klikk <a href={'https://github.com/fintech-enigma/Algoritmeportefolje/tree/main/Bollinger%20bands%20algoritme'} style={{color: "#06ADF4"}}>her</a> for å se resten av koden
