--- a/docs/Prisliste Fintech Enigma 2023.mdx
+++ b/docs/Prisliste Fintech Enigma 2023.mdx
@@ -1,23 +1,3 @@
-# Prisliste Fintech Enigma 2023
+# Prisliste Fintech Enigma 2024
 
-Under er veiledende priser for diverse arrangementer med Fintech Enigma for 2023. Vennligst ta kontakt med styret for nærmere informasjon og påmelding.
-
-### Bedriftspresentasjon
-
-#### Kostnad: 10 000kr
-
-Dette innebærer en presentasjon av bedriften i deres eller våre lokaler. Her bestemmer dere selv hvordan presentasjonen skal gå for seg. Vanlig er en eller flere presentasjoner etterfulgt av mat og mingling.
-
-### Workshop
-
-#### Kostnad: 10 000kr
-
-Holdes i deres eller våre lokaler. Dette er et interaktivt arrangement mellom dere og studentene med et større faglig fokus.
-
-### Eksterne arrangementer
-
-#### Kostnad: 5000kr
-
-Dette innebærer sosiale arrangementer som restaurantbesøk, bowling, paintball, padel og lignende. Dette blir promotert på www.fintechenigma.no og på sosiale medier. Her vil studentene og bedriften komme i kontakt på en uformell måte.
-
-Vi er åpne for pakkeløsninger og videre samarbeid. Har du et forslag til arrangement? Ta gjerne <a href="/docs/Kontakt_oss" style={{color: "#06ADF4"}}>kontakt</a>.
+Ta kontakt med vår linjeforening <a href="https://enigma-web.onrender.com/docs/For%20Bedrifter/Kontakt%20oss/" style={{color: "#06ADF4"}}>Enigma</a> for å avtale en bedriftspresentasjon
