Hans E sin AI class ute

--- a/docs/Portefoljeoversikt/Fintech Enigma Tradingalgoritmer.mdx
+++ b/docs/Portefoljeoversikt/Fintech Enigma Tradingalgoritmer.mdx
@@ -2,7 +2,7 @@
 
 <h3>Følg Utviklingen til våre trading-algoritmer utviklet av Fintech Enigmas utviklere! </h3>
 
-Våre første trading-algoritmer er nå live og handler basert på EMA-SMA indikatorer og stokastiske trender, de trader nå hhv AAPL og MSFT, følg utviklingen under! Tradingen skjer via <a href="https://alpaca.markets/" style={{color: "#06ADF4"}}>Alpaca Markets</a> sin API, flere algoritmer vil komme!
+Våre første trading-algoritmer er nå live og handler basert på EMA-SMA indikatorer, stokastiske trender, og en classifier modell, de trader nå hhv AAPL, MSFT, og BAC, følg utviklingen under! Tradingen skjer via <a href="https://alpaca.markets/" style={{color: "#06ADF4"}}>Alpaca Markets</a> sin API, flere algoritmer vil komme!
 
 import { useState, useEffect } from 'react';
 import axios from 'axios';
@@ -126,3 +126,10 @@ EMA-SMA crossover er en tradingstrategi som bruker to typer glidende gjennomsnit
 <LineGraph url={"https://fintechenigmaapi.onrender.com/getStochasticResults"} title={"Stokastisk Trend Trader"} label={"Avkastning i % Stokastisk Trend"} utvikler={'Nathaniel Stensen'} utviklerUrl={"https://www.linkedin.com/in/nathaniel-stensen-5658aa257/"}/>
 
 Stokastisk Trend algoritmen bruker en Augmented Dickey-Fuller test for å identifisere en stokastisk trend, finner så ut hvilke retning trenden går ved å utføre en autoregressiv regresjon. Kjøpssignal gis dersom det eksisterer en positiv stokastisk trend. 
+
+<br/>
+<br/>
+
+<LineGraph url={"https://fintechenigmaapi.onrender.com/getAIResults"} title={"AI Classifier Trader"} label={"Avkastning i % AI Classifier"} utvikler={'Hans Eirik Opsahl'} utviklerUrl={"https://www.linkedin.com/in/hans-eirik-opsahl-08530b294/"}/>
+
+AI Classifier algoritmen bruker en classifier til å determinere om en aksje skal opp eller ned i neste periode. Kjøpssignal gis dersom modellen predikerer prisoppgang i neste periode.
