lagt til FY24 rapport + endret nettside

--- a/docs/Rapporter.mdx
+++ b/docs/Rapporter.mdx
@@ -16,6 +16,7 @@ export const DownloadButton = ({ filename, url }) => {
 
 
 <div className={styles.rapporter}>
+    <DownloadButton filename={"Årsrapport 2024"} url={'/dataset/Årsrapport 2024.pdf'} />
     <DownloadButton filename={"Halvårsrapport 2024"} url={'/dataset/H1 Rapport Fintech Enigma.pdf'} />
     <DownloadButton filename={"Årsrapport 2023"} url={'/dataset/Årsrapport23.pdf'} />
 </div>
