nedeside på fondssiden

--- a/docs/Portefoljeoversikt/Nordnetportefolje.mdx
+++ b/docs/Portefoljeoversikt/Nordnetportefolje.mdx
@@ -166,9 +166,4 @@ export const Portefolje = () => {
     )
 }
 
-
-
-
-## Porteføljeoversikt
-
-<PortefoljeOversikt />../portefolje/portefolje.json
+Fondsiden er midlertidig nede. Se våre rapporter for å følge utviklingen.
