--- a/docs/Analyser.mdx
+++ b/docs/Analyser.mdx
@@ -16,5 +16,6 @@ export const DownloadButton = ({ filename, url }) => {
 
 
 <div className={styles.rapporter}>
+    <DownloadButton filename={"Stresstest portefølje H1 2025"} url={'/dataset/Stresstest_H1_2025_FE.pdf'} />
     <DownloadButton filename={"Risikoanalyse MOWI 2025"} url={'/dataset/Risikoanalyse av MOWI trend 220925.pdf'} />
 </div>
